# VapeCloudBot

./: .gitignore  CMakeLists.txt  run_debug.bat
python/: pyproject.toml  test_client.py  translation_server.py
source/: main.cpp
source/admin/: AdminManager.cpp  AdminManager.hpp
source/core/: RegisterBot.cpp  RegisterBot.hpp  TgBot.cpp  TgBot.hpp
source/handlers/: CommandHandler.cpp  CommandHandler.hpp  IHandler.hpp
source/logger/: Logger.cpp  Logger.hpp
source/session/: UserSession.hpp  UserSessionManager.cpp  UserSessionManager.hpp
source/utils/keyboard/: KeyboardBuilder.cpp  KeyboardBuilder.hpp
source/utils/logger/: Logger.cpp  Logger.hpp
source/utils/messages/: MessageTable.hpp
source/utils/translation/: TranslationClient.cpp  TranslationClient.hpp
